force-app/main/default/objects/Card_Check_List__c/Card_Check_List__c.object-meta.xml
<CustomObject>
    <label>Card Check List</label>
    <nameField>
        <displayFormat>CCLID-{0000000}</displayFormat>
        <label>Card Check List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Check List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>