force-app/main/default/objects/Card_Check_List__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Card Check List</relationshipLabel>
    <relationshipName>Card_Check_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>