force-app/main/default/objects/Card_Check_List__c/fields/Check_List_Title__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Title__c</fullName>
    <label>Check List Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>