force-app/main/default/objects/Card_Check_List__c/fields/No_of_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items__c</fullName>
    <label>No of Items</label>
    <summaryForeignKey>Card_Check_List_Item__c.Card_Check_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>