force-app/main/default/objects/Card_Check_List__c/fields/No_of_Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items_Complete__c</fullName>
    <label>No of Items Complete</label>
    <summaryFilterItems>
        <field>Card_Check_List_Item__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Card_Check_List_Item__c.Card_Check_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>